appId: ${APP_ID}
---

- runFlow:
    file: setup/setup-budget-test.flow.yaml

- openLink: 'budgie://budget'
- extendedWaitUntil:
    visible:
      id: 'BudgetWidget.EmptyState'
    timeout: 3000

- tapOn:
    id: 'BudgetWidget.EmptyState'
- runFlow:
    file: subflows/budget/choose-empty-canvas.flow.yaml

- tapOn:
    id: 'BudgetSetup.OverallLimitInput'
- inputText: '1000'

- scrollUntilVisible:
    element:
      id: 'BudgetSetup.CategoryLimitAddButton'
    direction: DOWN
    centerElement: true
- tapOn:
    id: 'BudgetSetup.CategoryLimitAddButton'
- runFlow:
    file: subflows/shared/select-category-by-search.flow.yaml
    env:
      CATEGORY_NAME: 'Groceries'

- extendedWaitUntil:
    visible:
      id: 'BudgetSetup.CategoryLimit.0.Row'
    timeout: 3000

- tapOn:
    id: 'BudgetSetup.CategoryLimit.0.AmountInput'
- inputText: '200'
- tapOn: 'Category limits'
- waitForAnimationToEnd

- tapOn:
    id: 'BudgetSetup.SaveButton'

- extendedWaitUntil:
    visible:
      id: 'BudgetWidget.CategoryRow.11'
    timeout: 3000

- tapOn:
    id: 'BudgetWidget.Card'
- extendedWaitUntil:
    visible: 'Budget details'
    timeout: 3000
- tapOn:
    id: 'BudgetDetails.EditButton'
- extendedWaitUntil:
    visible: 'Edit budget'
    timeout: 3000

- scrollUntilVisible:
    element:
      id: 'BudgetSetup.CategoryLimit.0.Row'
    direction: DOWN
    centerElement: true

- swipe:
    from:
      id: 'BudgetSetup.CategoryLimit.0.Row'
    direction: LEFT
    duration: 300
- extendedWaitUntil:
    visible:
      id: 'DeletableRow.DeleteButton'
    timeout: 3000
- tapOn:
    id: 'DeletableRow.DeleteButton'
- tapOn: 'Remove'
- waitForAnimationToEnd

- tapOn:
    id: 'BudgetSetup.SaveButton'

- extendedWaitUntil:
    visible: 'Budget details'
    timeout: 3000
- assertNotVisible:
    id: 'BudgetDetails.CategoryRow.11'
- tapOn:
    id: 'BudgetDetails.EditButton'
- extendedWaitUntil:
    visible: 'Edit budget'
    timeout: 3000

- scrollUntilVisible:
    element:
      id: 'BudgetSetup.CategoryLimitAddButton'
    direction: DOWN
    centerElement: true
- tapOn:
    id: 'BudgetSetup.CategoryLimitAddButton'
- runFlow:
    file: subflows/shared/select-category-by-search.flow.yaml
    env:
      CATEGORY_NAME: 'Groceries'

- extendedWaitUntil:
    visible:
      id: 'BudgetSetup.CategoryLimit.0.Row'
    timeout: 3000

- tapOn:
    id: 'BudgetSetup.CategoryLimit.0.AmountInput'
- inputText: '300'
- tapOn: 'Category limits'
- waitForAnimationToEnd

- tapOn:
    id: 'BudgetSetup.SaveButton'

- extendedWaitUntil:
    visible:
      id: 'BudgetDetails.CategoryRow.11'
    timeout: 3000
- assertVisible:
    id: 'BudgetDetails.CategorySpentLabel.11'
    text: '€0'
